@@ -1698,10 +1698,7 @@
             </activation>
             <properties>
                 <modular.jdk.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    --add-modules=java.se
-                    --illegal-access=permit</modular.jdk.args>
-                <!-- [WFCORE-1494] remove JUL workaround -->
-                <modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Djdk.attach.allowAttachSelf=true</modular.jdk.props>
+                    --add-modules=java.se</modular.jdk.args>
             </properties>
         </profile>
         <!--
